# ECE5532_Final_Project_Pepper_Yunxiao

./: README.md
human_sim/: CMakeLists.txt  package.xml
human_sim/launch/: human_sim.launch
human_sim/src/: human_sim.cpp  human_sim1.cpp  human_sim2.cpp  human_sim3.cpp  human_sim4.cpp  human_sim5.cpp
pepper_demo/: CMakeLists.txt  package.xml
pepper_demo/launch/: pepper_demo.launch
pepper_demo/rviz/: human_sim.rviz  pepper_demo.rviz  sim_project.rviz
pepper_demo/src/: pepper_backup.cpp  pepper_demo.cpp  pepper_demo.h  pepper_demo1.cpp
